[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.56.1"
aws-sdk-s3 = "0.31.1"
prometheus = "0.13.3"
actix-web-prom = "0.6.0"
systemstat = "0.2.3"

[dependencies.uuid]
version = "1.4.1"
features = ["v4", "fast-rng", "macro-diagnostics"]

[[bin]]
name = "backend"
path = "src/main.rs"
